<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FinalResultActivity">

    <TextView
        android:id="@+id/tvMath_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuiz_Result"
        style="@style/textStyleTitle"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMessageResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tvQuiz_messageResult"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvMath_title"
        app:layout_constraintTop_toBottomOf="@id/tvMath_title"/>

    <TextView
        android:id="@+id/tv_Res1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Level"
        android:textSize="20sp"
        style="@style/textStyleTitle"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/tvMessageResult"
        app:layout_constraintTop_toBottomOf="@id/tvMessageResult"/>

    <TextView
        android:id="@+id/tv_Res2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ResCorrect"
        android:textSize="20sp"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tv_Res1"
        app:layout_constraintTop_toBottomOf="@id/tv_Res1"/>

    <TextView
        android:id="@+id/tv_Res3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ResIncorrect"
        android:textSize="20sp"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tv_Res2"
        app:layout_constraintTop_toBottomOf="@id/tv_Res2"/>

    <TextView
        android:id="@+id/tv_Res4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ResEarned"
        android:textSize="20sp"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tv_Res3"
        app:layout_constraintTop_toBottomOf="@id/tv_Res3"/>

    <TextView
        android:id="@+id/tv_Res5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_ResAll"
        android:textSize="20sp"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tv_Res4"
        app:layout_constraintTop_toBottomOf="@id/tv_Res4"/>

    <TextView
        android:id="@+id/tv_Res6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvH_data"
        android:textSize="20sp"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/tv_Res5"
        app:layout_constraintTop_toBottomOf="@id/tv_Res5"/>




    <TextView
        android:id="@+id/tv_ResSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сложение"
        android:textSize="25sp"
        android:textColor="#509EC8"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_Res1"
        app:layout_constraintBottom_toBottomOf="@id/tv_Res1"/>

    <TextView
        android:id="@+id/tv_ResCorrectAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25sp"
        android:textColor="#509EC8"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_Res2"
        app:layout_constraintBottom_toBottomOf="@id/tv_Res2"/>

    <TextView
        android:id="@+id/tv_ResIncorrectAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25sp"
        android:textColor="#509EC8"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_Res3"
        app:layout_constraintBottom_toBottomOf="@id/tv_Res3"/>


    <TextView
        android:id="@+id/tv_ResEarned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25sp"
        android:textColor="#509EC8"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_Res4"
        app:layout_constraintBottom_toBottomOf="@id/tv_Res4"/>


    <TextView
        android:id="@+id/tv_ResAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9"
        android:textSize="25sp"
        android:textColor="#509EC8"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_Res5"
        app:layout_constraintBottom_toBottomOf="@id/tv_Res5"/>


    <TextView
        android:id="@+id/tv_ResData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="03 Jun 2022 17:30 PM"
        android:textSize="25sp"
        android:textColor="#509EC8"
        style="@style/textStyleTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@id/tv_Res6"
        app:layout_constraintBottom_toBottomOf="@id/tv_Res6"/>


    <Button
        android:id="@+id/btnResStartAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartAgain"
        android:textSize="20sp"
        style="@style/btnStyle"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintTop_toBottomOf="@id/tv_ResData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>